--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="toggle-theme" class="toggle-theme">
           <img
             id="toggle-icon"
-            src="assets/icons/moon.svg"
+            src="icons/moon.svg"
             alt="icon theme"
             class="toggle-theme__icon"
           />
