--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           </div>
           <div class="card__hobbies card__image-container">
             <img src="images/coleccionista.png" alt="Hobbi">
-            <h3 class="hobbie__tittle">Música & Ejercicio</h3>
+            <h3 class="hobbie__tittle">Coleccionista</h3>
             <p class="card__text">
               Como gran apasionado a los carros, tambien se convirtió en Hobby, esto es coleccionando carros a escala 1/24 y 1/18.
             </p>
